# verifiable-ad-protocol

./: .gitignore  Anchor.toml  CLAUDE.md  CONTEXT.md  README.md  package.json
demo/: e2e.ts
demo/mock-mcp/: ad-middleware.ts  server.ts  setup.ts
programs/verifiable-ad-protocol/: Cargo.toml
programs/verifiable-ad-protocol/src/: bitmap.rs  constants.rs  ed25519.rs  error.rs  lib.rs  state.rs
tests/: verifiable-ad-protocol.ts
